Added bookmarks, sqlite support Added Corespotlight support

--- a/SAAOSX/Base.lproj/Main.storyboard
+++ b/SAAOSX/Base.lproj/Main.storyboard
@@ -719,6 +719,7 @@
                                                 <string>saao/saa19</string>
                                                 <string>cams/gkab</string>
                                                 <string>pins</string>
+                                                <string>sqlite</string>
                                             </objectValues>
                                         </comboBoxCell>
                                         <connections>
