--- a/SAAOSX/TextEdition.storyboard
+++ b/SAAOSX/TextEdition.storyboard
@@ -103,14 +103,14 @@
                                         <action selector="navigate:" target="a8r-0S-bul" id="cqf-rc-EEe"/>
                                     </connections>
                                 </toolbarItem>
-                                <toolbarItem implicitItemIdentifier="07E29ECC-264F-4F13-9335-573E3460D945" label="Glossary" paletteLabel="Glossary" image="NSBookmarksTemplate" id="63K-br-nFt">
+                                <toolbarItem implicitItemIdentifier="07E29ECC-264F-4F13-9335-573E3460D945" label="Glossary" paletteLabel="Glossary" image="NSListViewTemplate" id="63K-br-nFt">
                                     <nil key="toolTip"/>
                                     <size key="minSize" width="32" height="25"/>
                                     <size key="maxSize" width="32" height="25"/>
                                     <button key="view" verticalHuggingPriority="750" id="pfA-BN-HY2">
                                         <rect key="frame" x="11" y="14" width="32" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <buttonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" image="NSBookmarksTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KJ7-ID-hQV">
+                                        <buttonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" image="NSListViewTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KJ7-ID-hQV">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
