--- a/SAAiOS/TextEdition/TextEdition.storyboard
+++ b/SAAiOS/TextEdition/TextEdition.storyboard
@@ -14,7 +14,7 @@
         <!--TextEdition-->
         <scene sceneID="yUG-lL-AsK">
             <objects>
-                <viewController storyboardIdentifier="TextEditionViewController" title="TextEdition" id="JEX-9P-axG" customClass="TextEditionViewController" customModule="SAAiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextEditionViewController" title="TextEdition" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JEX-9P-axG" customClass="TextEditionViewController" customModule="SAAiOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
